syntax = "proto3";

option go_package = "./genbooking";

import "google/protobuf/timestamp.proto";

message BookingRequest {
    int32 user_id = 1;
    int32 hotel_id = 2;
    string room_type = 3;
    google.protobuf.Timestamp check_in_date = 4;  
    google.protobuf.Timestamp check_out_date = 5; 
    float total_amount = 6;   
}


message BookingResponse {
    int32 booking_id=1;
    int32 user_id=2;
    int32 hotel_id=3;
    string room_type=4;
    string check_in_date = 5;  
    string check_out_date = 6; 
    float total_amount = 7; 
    string status=8; 

}

message BookingIdReq {
    int32 booking_id=1;
}

message BookingIdResp {
    int32 booking_id=1;
    int32 user_id=2;
    int32 hotel_id=3;
    string room_type=4;
    string check_in_date = 5;  
    string check_out_date = 6; 
    float total_amount = 7; 
    string status=8; 
}



message UpdateBookIdReq {
    int32 booking_id=1;
    google.protobuf.Timestamp check_in_date = 2;  
    google.protobuf.Timestamp check_out_date = 3;
    string room_type=4;

}

message UpdateBookIdResp{
    int32 booking_id=1;
    int32 user_id=2;
    int32 hotel_id=3;
    string room_type=4;
    google.protobuf.Timestamp check_in_date = 5;  
    google.protobuf.Timestamp check_out_date = 6; 
    float total_amount = 7; 
    string status=8; 
}

message DeleteBookIDReq{
    int32 booking_id=1;
}

message DeleteBookIdResp{
    string message=1;
}




service BookingService {
    rpc CreateBooking(BookingRequest) returns(BookingResponse);
    rpc GetBooking(BookingIdReq) returns(BookingIdResp);
    rpc UpdateBooking(UpdateBookIdReq) returns(UpdateBookIdResp);
    rpc DeleteBooking(DeleteBookIDReq) returns(DeleteBookIdResp);
}